# Kimi-Docs-RAG

./: README.md  ingest.py  main.py  pyproject.toml  query.py  test.py  test_retriever.py
data/vector_store/: chroma.sqlite3
src/: config.py
src/chunking/: chunker.py  tokenizer.py
src/generation/: answer.py  prompts.py
src/ingestion/: build_documents.py  build_index.py  e5_base_embeddings.py
src/parsing/: section_parser.py
src/retrieval/: retriever.py
